fix(export): update for new api
The old api that this was built on no longer works, so this program also
no longer works. This updates the code to use the new api and auth
methods

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "printWidth": 120
   },
   "dependencies": {
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "tough-cookie": "^5.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.4",
